<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_watchlist"
        android:icon="@drawable/ic_watch_list"
        android:title="@string/title_watchlist" />

    <item
        android:id="@+id/navigation_stream"
        android:icon="@drawable/ic_stream"
        android:title="@string/title_stream" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_portfolio"
        android:icon="@drawable/ic_portfolio"
        android:title="@string/title_portfolio" />



</menu>