<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_watchlist">

    <fragment
        android:id="@+id/navigation_watchlist"
        android:name="com.man.stockbittest.presentation.home.watchlist.WatchListFragment"
        android:label="@string/title_watchlist"
        tools:layout="@layout/fragment_watchlist" />

    <fragment
        android:id="@+id/navigation_stream"
        android:name="com.man.stockbittest.presentation.home.stream.StreamFragment"
        android:label="@string/title_stream"
        tools:layout="@layout/fragment_stream" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.man.stockbittest.presentation.home.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.man.stockbittest.presentation.home.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_portfolio"
        android:name="com.man.stockbittest.presentation.home.portfolio.PortfolioFragment"
        android:label="@string/title_portfolio"
        tools:layout="@layout/fragment_portfolio" />
</navigation>